--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
-<html><head><meta charset='UTF-8'><title>Hussein Bashar</title></head><body style='background-color:#0d1117; color:#39ff14; text-align:center; font-family:monospace; padding-top:60px;'>
-<img src='me.jpg' style='width:180px; height:180px; border-radius:50%; border:4px solid #39ff14; object-fit:cover; box-shadow: 0 0 25px #39ff14;'>
-<h1 style='font-size:30px; margin-top:20px;'>[ Hussein Bashar ]</h1>
-<div style='background:rgba(57, 255, 20, 0.1); padding:20px; border-radius:15px; margin:20px auto; max-width:80%; border:1px solid #32cd32;'>
-<p style='color:#fff; font-size:22px; font-weight:bold; line-height:1.8;'>مرحباً بكم في موقعي الشخصي أنا حسين، وهذا السيرفر يعمل مباشر وأنا هنا لحمايتكم من عمليات الابتزاز الالكتروني</p>
-</div>
-<div style='margin-top:30px; color:#555;'>Private & Secure Server Connection</div>
-</body></html>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>موقع حسين بشار جاسم الرسمي</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #1a1a1a; color: white; padding: 50px; }
+        img { width: 150px; border-radius: 50%; border: 3px solid #007bff; margin-bottom: 20px; box-shadow: 0 0 20px rgba(0,123,255,0.4); }
+        h1 { color: #007bff; margin-bottom: 10px; font-size: 2rem; }
+        .description { font-size: 1.1rem; color: #eeeeee; line-height: 1.6; max-width: 600px; margin: 0 auto 30px auto; }
+        .contact-info { display: flex; flex-direction: column; align-items: center; gap: 15px; }
+        .btn { display: inline-block; width: 280px; padding: 15px; text-decoration: none; border-radius: 50px; font-weight: bold; color: white; transition: 0.3s; font-size: 1rem; }
+        .btn-insta { background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); }
+        .btn-whatsapp { background-color: #25D366; }
+        .btn-telegram { background-color: #0088cc; }
+        .btn:hover { opacity: 0.8; transform: translateY(-3px); }
+    </style>
+</head>
+<body>
+    <img src="me.jpg" alt="حسين بشار جاسم">
+    <h1>حسين بشار جاسم</h1>
+    <div class="description">
+        مرحباً أنا حسين بشار جاسم وأنا هنا لحمايتكم من عمليات الابتزاز الإلكتروني
+    </div>
+    <div class="contact-info">
+        <a href="https://instagram.com/3s.gm" class="btn btn-insta" target="_blank">للتواصل عبر منصة الانستغرام</a>
+        <a href="https://t.me/H1_15T" class="btn btn-telegram" target="_blank">للتواصل عبر منصة التلكرام</a>
+        <a href="https://wa.me/9647833188844" class="btn btn-whatsapp" target="_blank">للتواصل عبر الواتساب</a>
+    </div>
+</body>
+</html>
